@@ -651,7 +651,7 @@ Reservation is for specific nodes (output only)
 .TP
 \fIFeatures\fP=<features>
 Set the reservation's required node features. Multiple values 
-may be comma separated if all features are required (AND operation) or 
+may be "&" separated if all features are required (AND operation) or 
 separated by "|" if any of the specified features are required (OR operation).
 Value may be cleared with blank data value, "Features=".
 
